// Copyright 2018 The Fuchsia Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.
syntax = "proto3";

package cobalt;

// A time window over which to aggregate Events on-device.
enum WindowSize {
  UNSET = 0;

  // Window size of 1 day.
  WINDOW_1_DAY = 1;

  // Window size of 7 days.
  WINDOW_7_DAYS = 7;

  // Window size of 30 days.
  WINDOW_30_DAYS = 30;
}
